--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,41 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
-
         </activity>
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".eventlistListActivity"
+            android:label="@string/title_eventlist_list"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.hro.projectapp.MainActivity" />
+        </activity>
+        <activity
+            android:name=".eventlistDetailActivity"
+            android:label="@string/title_eventlist_detail"
+            android:parentActivityName=".eventlistListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.hro.projectapp.eventlistListActivity" />
+        </activity>
+        <activity
+            android:name=".leftMenu"
+            android:label="@string/title_activity_left_menu"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.hro.projectapp.MainActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
