--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,14 +17,18 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+
         <activity android:name=".MainActivity" >
+            <service
+                    android:name=".FetchAddressIntentService"
+                    android:exported="false"/>
+
 
             <!-- android:label="@string/app_name" > -->
         </activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
-
             <!-- android:label="@string/title_activity_login" -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
