--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="nl.hro.projectapp.MainActivity" />
         </activity>
+        <activity
+            android:name=".EventDetailActivity"
+            android:label="@string/title_activity_new_event"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.hro.projectapp.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
